// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`confirm-content it should match snapshot 1`] = `
<Fragment>
  <Component>
    Are you sure you want to cancel this appointment?
  </Component>
  <Component>
    <Component
      loading={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Yes
    </Component>
    <Component
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      No
    </Component>
  </Component>
</Fragment>
`;

exports[`confirm-content it should match snapshot when isSubmitting equal to true 1`] = `
<Fragment>
  <Component>
    Are you sure you want to cancel this appointment?
  </Component>
  <Component>
    <Component
      loading={true}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Yes
    </Component>
    <Component
      disabled={true}
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      No
    </Component>
  </Component>
</Fragment>
`;
